#22022 adiciona filtragem para solicitar ramais